[tool.poetry]
name = "pytest-insta"
version = "0.1.6"
description = "A practical snapshot testing plugin for pytest"
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

homepage = "https://github.com/vberlier/pytest-insta"
repository = "https://github.com/vberlier/pytest-insta"
documentation = "https://github.com/vberlier/pytest-insta"

readme = "README.md"

keywords = [
  "pytest-plugin",
  "pytest",
  "testing",
  "snapshot",
  "snapshot-testing"
]

classifiers = ["Framework :: Pytest"]

include = ["pytest_insta/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.2"
wrapt = "^1.12.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
rope = "^0.18.0"
isort = "^5.7.0"
python-semantic-release = "^7.15.0"

[tool.poetry.plugins.pytest11]
insta = "pytest_insta.plugin"

[tool.black]
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = ["pytest_insta/__init__.py:__version__"]
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
build_command = "poetry build"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
